--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,22 +1,26 @@
 header {
     background-color: #FFBF00;
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     font-family: "Poppins", sans-serif;
-    padding: 10px;
-   
+    padding: 0.625rem;
+    position: relative; /* For absolute positioning of the title */
 }
 
+.title {
+    position: absolute; 
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.50rem;
+}
 ul {
     display: flex;
     justify-content: end;
     gap: 2rem;
-    padding-right: 10px;
-    min-width: 400px;
+    padding-right: 5rem;
     margin: 0;
-    
 }
 
 ul li {
@@ -28,17 +32,30 @@ ul li a {
     color: white;
     font-size: 1rem;
 }
+input{
+    border-radius: 5px 0px 0px 5px;
+    border: 1px solid black;
+    padding: 10px;
+}
+button{
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 0 5px 5px 0;
+    background-color: #FFBF00;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
 
 .hamburger-menu {
     display: flex;
     flex-direction: row;
-    justify-content: center; 
-    font-size: 1.25rem; 
+    justify-content: center;
+    font-size: 1.25rem;
     cursor: pointer;
     color: white;
 }
 
-.cart-icon{
-    color: #fff; 
+.cart-icon {
+    color: #fff;
     font-size: 1.5rem;
 }
