--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,61 +1,59 @@
 header {
     background-color: #FFBF00;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
     font-family: "Poppins", sans-serif;
     padding: 0.625rem;
-    position: relative; /* For absolute positioning of the title */
+    position: relative;
+    z-index: 1;
 }
 
-.title {
-    position: absolute; 
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1.50rem;
-}
-ul {
+.nav-container {
     display: flex;
-    justify-content: end;
-    gap: 2rem;
-    padding-right: 5rem;
+    justify-content: center; 
+    align-items: center;
+    flex-grow: 1; 
+}
+
+.nav-links {
+    display: flex;
+    justify-content: center;
+    gap: 2rem; 
     margin: 0;
+    list-style: none;
 }
 
-ul li {
-    list-style-type: none;
-}
-
-ul li a {
+.nav-links li a {
     text-decoration: none;
     color: white;
     font-size: 1rem;
 }
-input{
+
+.icon-links {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding-left: 250px;
+}
+
+.icon-links svg {
+    color: #fff;
+    font-size: 1.5rem;
+}
+
+input {
     border-radius: 5px 0px 0px 5px;
     border: 1px solid black;
     padding: 10px;
 }
-button{
+
+button {
     padding: 10px;
     border: 1px solid black;
     border-radius: 0 5px 5px 0;
     background-color: #FFBF00;
     color: rgb(255, 255, 255);
     cursor: pointer;
-}
-
-.hamburger-menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-size: 1.25rem;
-    cursor: pointer;
-    color: white;
-}
-
-.cart-icon {
-    color: #fff;
-    font-size: 1.5rem;
 }
