--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -17,7 +17,7 @@
 
 .images {
     width: 100%;
-    height: 300px;
+    height: 200px;
     object-fit: contain;
     flex-shrink: 0;
     transition: transform 0.5s ease-in-out;
@@ -27,14 +27,14 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: 20px;
+    padding: 10px;
     top: 0;
     z-index: 1;
 }
 
 .law {
-    width: 200px;
-    height: 500px;
+    width: 150px;
+    height: 400px; 
 }
 
 .arrow {
@@ -42,34 +42,34 @@
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-    font-size: 1.5rem; /* Reduced font size */
+    font-size: 1.25rem; 
     color: white;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 8px; /* Reduced padding */
+    padding: 6px; 
     border-radius: 50%;
     z-index: 2;
 }
 
 .arrow-left {
-    left: 10px;
+    left: 5px; 
 }
 
 .arrow-right {
-    right: 10px;
+    right: 5px; 
 }
 
 .slider-container {
-    width: 60%; /* Reduced width for a smaller slider */
-    max-width: 800px; /* Adjusted max-width */
+    width: 50%; 
+    max-width: 600px; 
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 10px 0; 
     position: relative;
 }
 
 .slide {
     position: relative;
     width: 100%;
-    height: 300px; /* Reduced height */
+    height: 200px;
     background-color: #333;
     display: flex;
     align-items: center;
@@ -79,19 +79,18 @@
 }
 
 .slider-image {
-    margin-top: 200px;
+    margin-top: 100px;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 8px;
 }
 
 @media (max-width: 768px) {
     .slider-container {
-        width: 80%; /* Adjusted width for smaller screens */
+        width: 70%; 
     }
 
     .slide {
-        height: 200px; /* Adjusted height for smaller screens */
+        height: 150px; 
     }
 }
