--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,28 +5,52 @@
     align-items: center;
     position: relative;
     width: 100%;
-    height: 50vh;
 }
 
-.slide-images {
-    display: flex;
-    align-items: center;
+.slider-container {
+    width: 50%;
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 10px 0;
+    position: relative;
+}
+
+.slider-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-top: 30px;
+}
+
+.anime-slider-container {
+    width: 80%;
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 10px 0;
+    position: relative;
+}
+
+.anime-slide {
     position: relative;
     width: 100%;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
-.images {
-    width: 100%;
-    height: 200px;
+.anime-slider-image {
+    width: 200px;
+    height: 100%;
     object-fit: contain;
-    flex-shrink: 0;
-    transition: transform 0.5s ease-in-out;
 }
 
 .display-container {
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: 100px;
     padding: 10px;
     top: 0;
     z-index: 1;
@@ -34,7 +58,7 @@
 
 .law {
     width: 150px;
-    height: 400px; 
+    height: 400px;
 }
 
 .arrow {
@@ -42,28 +66,19 @@
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
-    font-size: 1.25rem; 
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 6px; 
+    font-size: 1.25rem;
+    color: black;
+    padding: 6px;
     border-radius: 50%;
     z-index: 2;
 }
 
 .arrow-left {
-    left: 5px; 
+    left: -50px;
 }
 
 .arrow-right {
-    right: 5px; 
-}
-
-.slider-container {
-    width: 50%; 
-    max-width: 600px; 
-    margin: 0 auto;
-    padding: 10px 0; 
-    position: relative;
+    right: 50px;
 }
 
 .slide {
@@ -78,19 +93,28 @@
     overflow: hidden;
 }
 
-.slider-image {
-    margin-top: 100px;
+.images {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 200px;
+    object-fit: contain;
+    flex-shrink: 0;
+    transition: transform 0.5s ease-in-out;
 }
 
 @media (max-width: 768px) {
     .slider-container {
-        width: 70%; 
+        width: 70%;
+    }
+
+    .anime-slider-container {
+        width: 90%;
     }
 
     .slide {
-        height: 150px; 
+        height: 150px;
+    }
+
+    .anime-slide {
+        height: 100px;
     }
 }
