--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,6 +5,7 @@
     align-items: center;
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 
 .slider-container {
@@ -13,6 +14,7 @@
     margin: 20px auto;
     padding: 10px 0;
     position: relative;
+    
 }
 
 .slider-image {
@@ -20,6 +22,7 @@
     height: 100%;
     object-fit: cover;
     margin-top: 30px;
+    
 }
 
 .anime-slider-container {
@@ -53,12 +56,12 @@
     right: 100px;
     padding: 10px;
     top: 0;
-    z-index: 1;
+    z-index: -1;
 }
 
 .law {
-    width: 150px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
 }
 
 .arrow {
@@ -67,7 +70,7 @@
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 1.25rem;
-    color: black;
+    color: #FFBF00;
     padding: 6px;
     border-radius: 50%;
     z-index: 2;
