--- a/src/components/header.css
+++ b/src/components/header.css
@@ -9,14 +9,19 @@ header {
     position: relative;
     z-index: 1;
 }
+
 .logo-container{
     display: flex;
+    
 }
+
 .logo{
     height: 8rem;
     width: 8rem;
     margin-left: 0;
-
+    position: relative;                   
+    left: 450px;
+    right: 0;                                                                          
 }
 
 .nav-container {
@@ -51,27 +56,26 @@ header {
     cursor: pointer;
     display: flex;
     align-items: center;
-    height: 60%; 
-
+    height: 60%;
 }
 
 .nav-links li a::before, .dropdown-toggle::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: -40%;
+    top: 100%; 
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.3);
-    transition: left 0.4s ease-in-out, visibility 0s ease-in-out -5s;
+    transition: top 0.4s ease-in-out, visibility 0s ease-in-out -5s;
     z-index: -1;
     visibility: hidden;
 }
 
 .nav-links li a:hover::before, .dropdown-toggle:hover::before {
-    left: 0;
+    top: 0; 
     visibility: visible;
-    transition: left 0.4s ease-in-out, visibility 0s ease-in-out 0s;
+    transition: top 0.4s ease-in-out, visibility 0s ease-in-out 0s;
 }
 
 .nav-links li a:hover, .dropdown-toggle:hover {
@@ -80,11 +84,11 @@ header {
     transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
+
 .dropdown {
     position: relative;
     display: flex;
     align-items: center;
-    
 }
 
 .dropdown-toggle {
@@ -101,17 +105,16 @@ header {
     height: 100%;
 }
 
-
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: 100%; 
+    top: 100%;
     left: 0;
     background-color: #FFBF00;
     list-style: none;
     padding: 0;
     margin: 0;
-    width: max-content; 
+    width: max-content;
     z-index: 10;
     border: 1px solid black;
     transition: opacity 0.3s ease-in-out;
