--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -1,25 +1,22 @@
-
-
 .product-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   padding: 1rem;
   margin: 0;
-  box-sizing: border-box; /* Include padding in element's width */
+  box-sizing: border-box; 
 }
 
-
-  .product-card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    display: flex;
-    flex-direction: column; 
-    height: 100%; 
-  }
+.product-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffbf001f;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
   
   .product-image {
     width: 100%;
@@ -29,9 +26,33 @@
   
   .product-info {
     padding: 1rem;
-    flex: 1; 
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
-
+  .product-info div:last-child {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+  }
+  
+  .add-to-cart-button {
+    background-color: #ffbf00;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+    margin-top: 1rem; 
+  }
+  
+  .add-to-cart-button:hover {
+    background-color: #e0a800;
+  }
+  
   .product-title {
     font-size: 1.25rem;
     margin: 0 0 0.5rem 0;
@@ -49,18 +70,27 @@
     overflow: hidden; 
     text-overflow: ellipsis; 
   }
-
   .product-price {
     font-size: 1.125rem;
     color: #333;
     font-weight: bold;
+    margin-bottom: 0.5rem;
   }
-
   .display-container {
     margin-top: 2rem;
     position: relative;
   }
-
+.card-btn{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+button{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
   @media (max-width: 1200px) {
     .product-list {
       grid-template-columns: repeat(3, 1fr); 
