--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -70,7 +70,7 @@
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 1.25rem;
-    color: #FFBF00;
+    color: black;
     padding: 6px;
     border-radius: 50%;
     z-index: 2;
