--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -4,108 +4,134 @@
   gap: 1rem;
   padding: 1rem;
   margin: 0;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 .product-card {
+  position: relative;
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #ffbf001f;
+  background-color: #dacda9;
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-  
-  .product-image {
-    width: 100%;
-    height: 200px;
-    object-fit: contain; 
-  }
-  
-  .product-info {
-    padding: 1rem;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .product-info div:last-child {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-  }
-  
-  .add-to-cart-button {
-    background-color: #ffbf00;
-    color: white;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-    margin-top: 1rem; 
-  }
-  
-  .add-to-cart-button:hover {
-    background-color: #e0a800;
-  }
-  
-  .product-title {
-    font-size: 1.25rem;
-    margin: 0 0 0.5rem 0;
-    color: #333;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
 
-  .product-description {
-    color: #666;
-    font-size: 0.875rem;
-    margin: 0 0 0.5rem 0;
-    overflow: hidden; 
-    text-overflow: ellipsis; 
-  }
-  .product-price {
-    font-size: 1.125rem;
-    color: #333;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-  }
-  .display-container {
-    margin-top: 2rem;
-    position: relative;
-  }
-.card-btn{
+.product-image {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+
+.product-info {
+  padding: 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.product-info div:last-child {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
-button{
-  align-items: center;
+
+.product-title {
+  font-size: 1.25rem;
+  margin: 0 0 0.5rem 0;
+  color: #333;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product-description {
+  color: #666;
+  font-size: 0.875rem;
+  margin: 0 0 0.5rem 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product-price {
+  font-size: 1.125rem;
+  color: #333;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.product-footer {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: center; 
+  opacity: 0; 
+  transition: opacity 0.3s ease;
+  position: absolute;
+  bottom: 1rem; 
+  left: 1rem;
+  right: 1rem;
 }
-  @media (max-width: 1200px) {
-    .product-list {
-      grid-template-columns: repeat(3, 1fr); 
-    }
+
+.product-card:hover .product-footer {
+  opacity: 1; 
+}
+
+.add-to-cart-button {
+  background-color: #ffbf00; 
+  color: white; 
+  padding: 0.4rem;
+  width: 150px; 
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease, opacity 0.3s ease;
+}
+
+.icon-button {
+  background-color: #ffbf00; 
+  border: none;
+  padding: 0.5rem;
+  font-size: 0.95rem;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  transition: background-color 0.3s ease, opacity 0s ease; 
+  cursor: pointer;
+  color: #ddd;
+  border-right: 1px solid black;
+}
+
+.icon-button:hover {
+  background-color: #e0a800;
+}
+
+.product-card:hover .add-to-cart-button {
+  opacity: 1; 
+  pointer-events: auto; 
+}
+
+.add-to-cart-button:hover {
+  background-color: #e0a800; 
+}
+
+@media (max-width: 1200px) {
+  .product-list {
+    grid-template-columns: repeat(3, 1fr);
   }
-  
-  @media (max-width: 900px) {
-    .product-list {
-      grid-template-columns: repeat(2, 1fr); 
-    }
+}
+
+@media (max-width: 900px) {
+  .product-list {
+    grid-template-columns: repeat(2, 1fr);
   }
-  
-  @media (max-width: 600px) {
-    .product-list {
-      grid-template-columns: 1fr; 
-    }
+}
+
+@media (max-width: 600px) {
+  .product-list {
+    grid-template-columns: 1fr;
   }
-  
+}
