--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,6 +6,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
+    color: white;
 }
 
 .slider-container {
@@ -14,7 +15,7 @@
     margin: 20px auto;
     padding: 10px 0;
     position: relative;
-    
+    border: none;
 }
 
 .slider-image {
@@ -22,7 +23,19 @@
     height: 100%;
     object-fit: cover;
     margin-top: 30px;
+
     
+}
+.slick-prev,
+.slick-next {
+  background-color: transparent !important; 
+  border: none !important; 
+}
+
+.slick-prev::before,
+.slick-next::before {
+  color:#373838;
+  font-size: 24px !important; 
 }
 
 .anime-slider-container {
@@ -53,8 +66,7 @@
 .display-container {
     position: absolute;
     bottom: 0;
-    right: 100px;
-    padding: 10px;
+    right: -100px;
     top: 0;
     z-index: -1;
 }
@@ -70,7 +82,7 @@
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 1.25rem;
-    color: black;
+    color: white;
     padding: 6px;
     border-radius: 50%;
     z-index: 2;
