--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   height: 100%;
   background-color: #161616;
+  width: 300px;
 }
 
 .product-image {
@@ -32,6 +33,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
+
 }
 
 .product-info div:last-child {
@@ -47,6 +50,7 @@
   white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: center;
 }
 
 .product-description {
