--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -115,7 +115,19 @@
     flex-shrink: 0;
     transition: transform 0.5s ease-in-out;
 }
-
+footer{
+    width: 100%;
+    height: 100%;
+    background-color: #FFBF00;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+}
+.footer-info{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 @media (max-width: 768px) {
     .slider-container {
         width: 70%;
