--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -115,19 +115,98 @@
     flex-shrink: 0;
     transition: transform 0.5s ease-in-out;
 }
-footer{
+
+footer {
     width: 100%;
-    height: 100%;
     background-color: #FFBF00;
-    justify-content: center;
-    text-align: center;
-    position: relative;
+    padding: 20px;
+    box-sizing: border-box; 
 }
-.footer-info{
+
+
+.footer-main {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    align-items: flex-start; 
+    gap: 40px;
+    margin-bottom: 20px; 
 }
+
+.footer-info,
+.footer-account, .get-in-touch {
+    flex: 1; 
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center; 
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    display: block; 
+    margin: 5px 0; 
+}
+
+a:hover {
+    color: #bb0000; 
+    text-decoration: underline;
+}
+
+.copyrights {
+    text-align: center; 
+    border-top: 1px solid black; 
+    padding-top: 10px; 
+}
+
+.needsomehelp{
+    border-left: 1px solid black ;
+    text-align: center;
+    padding-left: 3.125rem;
+    color: black;
+}
+.needsomehelp > h2{
+    color: white;
+}
+.need-help-icons {
+    display: flex;
+    justify-content: space-around; 
+    flex-wrap: wrap; 
+    gap: 20px; 
+}
+
+.icon-label {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    text-align: center; 
+}
+
+.icon-label a {
+    font-size: 24px; 
+    color: black;
+    text-decoration: none;
+    margin-bottom: 5px; 
+}
+
+.icon-label label {
+    font-size: 14px; 
+    color: black;
+}
+.call:hover{
+    color: green;
+}
+.facebook:hover{
+color: blue;
+}
+.faq:hover{
+    color: white;
+}
+.email:hover{
+color: #c18d68;
+}
+
+
 @media (max-width: 768px) {
     .slider-container {
         width: 70%;
