--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -149,8 +149,7 @@ a {
 }
 
 a:hover {
-    color: #bb0000; 
-    text-decoration: underline;
+    text-decoration: underline white;
 }
 
 .copyrights {
@@ -162,7 +161,7 @@ a:hover {
 .needsomehelp{
     border-left: 1px solid black ;
     text-align: center;
-    padding-left: 3.125rem;
+    padding: 0 4rem 0 3.125rem;
     color: black;
 }
 .needsomehelp > h2{
@@ -176,6 +175,7 @@ a:hover {
 }
 
 .icon-label {
+    padding-top: 2rem;
     display: flex;
     flex-direction: column; 
     align-items: center; 
