--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -26,6 +26,7 @@
   width: 100%;
   height: 200px;
   object-fit: contain;
+  padding-top: 1rem;
 }
 
 .product-info {
@@ -45,7 +46,7 @@
 }
 
 .product-title {
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin: 0 0 0.5rem 0;
   color: #FFFFFF;
   white-space: normal;
@@ -63,7 +64,7 @@
 }
 
 .product-price {
-  font-size: 1.125rem;
+  font-size: 0.90rem;
   color: #FFFFFF;
   font-weight: bold;
   margin-bottom: 0.5rem;
