--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -121,6 +121,7 @@ footer {
     background-color: #FFBF00;
     padding: 20px;
     box-sizing: border-box; 
+    height: 100%;
 }
 
 
@@ -133,8 +134,7 @@ footer {
 }
 
 .footer-info,
-.footer-account, .get-in-touch {
-    flex: 1; 
+.footer-account, .get-in-touch { 
     display: flex;
     flex-direction: column; 
     align-items: center;
@@ -169,13 +169,13 @@ a:hover {
 }
 .need-help-icons {
     display: flex;
-    justify-content: space-around; 
-    flex-wrap: wrap; 
-    gap: 20px; 
+    justify-content: center; 
+    gap: 2rem;
+    
 }
 
 .icon-label {
-    padding-top: 2rem;
+    padding-top: 1rem;
     display: flex;
     flex-direction: column; 
     align-items: center; 
@@ -186,11 +186,11 @@ a:hover {
     font-size: 24px; 
     color: black;
     text-decoration: none;
-    margin-bottom: 5px; 
+    margin-bottom: 2px;
 }
 
 .icon-label label {
-    font-size: 14px; 
+    font-size: 0.875rem; 
     color: black;
 }
 .call:hover{
