--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -141,3 +141,22 @@
     grid-template-columns: 1fr;
   }
 }
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+    
+    .product-card {
+      width: 250px;
+    }
+    .product-title {
+      font-size: 0.70rem;
+    }
+    .product-description {
+      font-size: 0.50rem;
+    }
+    .product-price {
+      font-size: 0.70rem;
+    }
+    
+}
