--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,3 +1,41 @@
+.head-head{
+    background-color: #FFBF00;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+
+}
+.fbpage {
+    border-radius: 4px;
+    background: linear-gradient(to right, #FFBF00, #80cbee) !important;
+    border: 1px solid black;
+    color: #3700ff;
+    text-align: center;
+    width: 100%;
+  }
+  .fbpage span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.4s;
+  }
+  .fbpage span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  .fbpage:hover span {
+    padding-right: 25px;
+  }
+  .fbpage:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  
 header {
     background-color: #FFBF00;
     display: flex;
@@ -14,15 +52,13 @@ header {
     
 }
 
-.logo{
-    height: 8rem;
-    width: 8rem;
-    margin-left: 0;
-    position: relative;                   
-    left: 450px;
-    right: 0;                                                                          
+.logo {
+  height: 8rem;
+  width: 8rem;
+  position: relative;
+  transform: translateX(450px);
+  display: block;
 }
-
 .nav-container {
     display: flex;
     justify-content: center;
@@ -96,7 +132,6 @@ header {
 .nav-links li a::before, .dropdown-toggle::before {
     content: "";
     position: absolute;
-    top: 100%;
     left: 0;
     width: 100%;
     height: 100%;
