--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -135,6 +135,7 @@ footer {
     flex-direction: column; 
     align-items: center;
     justify-content: center; 
+    font-size: 0.90rem;
 }
 
 a {
@@ -199,7 +200,7 @@ color: blue;
     color: white;
 }
 .email:hover{
-color: #c18d68;
+color: #ff0000;
 }
 
 /*For mobile*/
