--- a/src/components/header.css
+++ b/src/components/header.css
@@ -56,7 +56,7 @@ header {
   height: 8rem;
   width: 8rem;
   position: relative;
-  transform: translateX(450px);
+  left: 450px;
   display: block;
 }
 .nav-container {
