--- a/src/components/header.css
+++ b/src/components/header.css
@@ -6,7 +6,7 @@
 
 }
 .fbpage {
-    background: linear-gradient(to right, #FFBF00, #80cbee) !important;
+    background: linear-gradient(to right, #FFBF00, #aee0f7) !important;
     border: 1px solid black;
     color: #3700ff;
     text-align: center;
