--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -203,6 +203,16 @@ color: blue;
 color: #ff0000;
 }
 
+.map-section .gmap-frame #gmap-canvas{
+    height: 65vh;
+    width: 800px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.store-loc{
+    text-align: center;
+}
+
 /*For mobile*/
 .info{
     display: none; 
