--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -71,7 +71,7 @@
 
 .product-price {
   font-size: 0.90rem;
-  color: #FFFFFF;
+  color: #f1c40f;
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
