--- a/src/pages/NewArrivals.css
+++ b/src/pages/NewArrivals.css
@@ -1,25 +1,89 @@
+.title {
+  padding: 30px;
+  text-align: center;
+  color: white;
+  font-size: 1.50rem;
+  font-weight: bold;
+}
+
 .card-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); 
-    grid-template-rows: repeat(5, auto); 
-    row-gap: 12rem; 
-    column-gap: 1rem; 
-    padding: 1rem; 
-  }
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, auto);
+  row-gap: 2rem;
+  column-gap: 1rem;
+  padding: 1rem;
+  max-width: 1300px; 
+  margin: 0 auto;
+  justify-content: center; 
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  background-color: #161616;
+  justify-content: center;
+  align-items: center;
+  padding: 0; 
+  border-radius: 5px;
+  height: 100%;
+}
+
+.cards img {
+  width: 100%;
+  height: 200px; 
+  object-fit: cover; 
+  border-radius: 5px; 
+  display: block; 
+}
+
+.cards-content {
+  padding: 1rem; 
+  text-align: center;
+  color: white;
+}
+
+.add-to-cart-buttonF,
+.iconF-button {
+    background-color: #ec6801;
+    width: 100%; 
+    height: 40px; 
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+    color: white;
+}
+.iconF-button{
+  border-right: 1px solid black;
   
-  .cards {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    padding: 5rem;
-    border-radius: 5px; 
-    height: 100%; 
-    gap: 0.5rem; 
+}
+
+.add-to-cart-buttonF:hover,
+.iconF-button:hover {
+    background-color: #ca8b5b;
+}
+.product-card:hover .add-to-cart-buttonF {
+  opacity: 1; 
+  pointer-events: auto; 
+}
+
+.add-to-cart-buttonF:hover {
+  background-color: #ca8b5b;
+}
+.icons-newarrival{
+  display: flex;
+  flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  .product-actions {
+    flex-direction: column; 
+    gap: 10px; 
   }
-  
-  .cards-content {
-    text-align: center;
+
+  .add-to-cart-button,
+  .icon-button {
+    width: 100%; 
+    height: 30px; 
   }
-  
+}
