--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,7 +12,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: flex-start; 
-    gap: 40px;
+    gap: 200px;
     margin-bottom: 20px; 
 }
 
@@ -23,6 +23,8 @@ footer {
     align-items: center;
     justify-content: center; 
     font-size: 0.90rem;
+    color: white;
+    padding-bottom: 50px;
 }
 .footer-main .footer-info a,
 .footer-main .footer-account a,
@@ -53,6 +55,7 @@ a {
     text-align: center;
     padding: 0 4rem 0 3.125rem;
     color: black;
+    padding-bottom: 50px;
 }
 .needsomehelp > h2{
     color: white;
